--- a/contact.html
+++ b/contact.html
@@ -323,7 +323,7 @@
                 <!-- Contact Form -->
                 <div>
                     <h2 class="text-3xl font-bold text-gray-800 mb-6">Send Us a Message</h2>
-                    <form class="contact-form" id="contact-form" action="https://formspree.io/f/xovkrwbg" method="POST">
+                    <form class="contact-form" id="contact-form" action="https://formspree.io/f/xblzwkvr" method="POST">
                         <div class="grid md:grid-cols-2 gap-4">
                             <div>
                                 <label for="name" class="block text-gray-700 mb-2">Your Name</label>
@@ -667,3 +667,4 @@
 </body>
 
 </html>
+
