--- a/contact.html
+++ b/contact.html
@@ -323,29 +323,60 @@
                 <!-- Contact Form -->
                 <div>
                     <h2 class="text-3xl font-bold text-gray-800 mb-6">Send Us a Message</h2>
-                    <form class="contact-form" id="contact-form" action="https://formspree.io/f/xblzwkvr" method="POST">
-                        <div class="grid md:grid-cols-2 gap-4">
-                            <div>
-                                <label for="name" class="block text-gray-700 mb-2">Your Name</label>
-                                <input type="text" id="name" name="name" required>
-                            </div>
-                            <div>
-                                <label for="email" class="block text-gray-700 mb-2">Your Email</label>
-                                <input type="email" id="email" name="email" required>
-                            </div>
-                        </div>
-                        <div>
-                            <label for="subject" class="block text-gray-700 mb-2">Subject</label>
-                            <input type="text" id="subject" name="subject" required>
-                        </div>
-                        <div>
-                            <label for="message" class="block text-gray-700 mb-2">Your Message</label>
-                            <textarea id="message" name="message" rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700 transition w-full">
-                            Send Message
-                        </button>
-                    </form>
+                 <form id="contact-form" action="https://formspree.io/f/xovkrwbg" method="POST" class="contact-form space-y-4">
+
+    <!-- Hidden Subject (Improves email formatting) -->
+    <input type="hidden" name="_subject" value="New Contact Form Submission">
+
+    <div class="grid md:grid-cols-2 gap-4">
+        <div>
+            <label for="name" class="block text-gray-700 mb-2">Your Name</label>
+            <input 
+                type="text" 
+                id="name" 
+                name="name" 
+                class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"
+                required>
+        </div>
+        <div>
+            <label for="email" class="block text-gray-700 mb-2">Your Email</label>
+            <!-- IMPORTANT: use _replyto for Formspree -->
+            <input 
+                type="email" 
+                id="email" 
+                name="_replyto" 
+                class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"
+                required>
+        </div>
+    </div>
+
+    <div>
+        <label for="subject" class="block text-gray-700 mb-2">Subject</label>
+        <input 
+            type="text" 
+            id="subject" 
+            name="subject" 
+            class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"
+            required>
+    </div>
+
+    <div>
+        <label for="message" class="block text-gray-700 mb-2">Your Message</label>
+        <textarea 
+            id="message" 
+            name="message" 
+            rows="5" 
+            class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"
+            required></textarea>
+    </div>
+
+    <button 
+        type="submit" 
+        class="bg-indigo-600 text-white px-6 py-3 rounded-lg hover:bg-indigo-700 transition w-full">
+        Send Message
+    </button>
+</form>
+
                 </div>
                 
                 <!-- Map & Additional Info -->
@@ -667,4 +698,5 @@
 </body>
 
 </html>
+
 
