--- a/contact.html
+++ b/contact.html
@@ -585,42 +585,67 @@
             // =======================
             // Contact Form Handling
             // =======================
-            contactForm.addEventListener('submit', function(e) {
-    e.preventDefault();
+           const contactForm = document.getElementById('contact-form');
 
-    const formData = new FormData(contactForm);
-    const name = formData.get('name');
-    const email = formData.get('_replyto');
-    const subject = formData.get('subject');
-    const message = formData.get('message');
+function isValidEmail(email) {
+    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+    return emailRegex.test(email);
+}
 
-    if (!name || !email || !subject || !message) {
-        showFormMessage('Please fill in all fields.', 'error');
-        return;
+function showFormMessage(message, type) {
+    const existingMessage = document.querySelector('.form-message');
+    if (existingMessage) existingMessage.remove();
+
+    const div = document.createElement('div');
+    div.className = `form-message ${type === 'error' ? 'form-error' : 'form-success'} animate-fade-in`;
+    div.textContent = message;
+
+    contactForm.parentNode.insertBefore(div, contactForm);
+
+    if (type === 'success') {
+        contactForm.reset();
+        setTimeout(() => div.remove(), 5000); // Remove message after 5s
     }
+}
 
-    if (!isValidEmail(email)) {
-        showFormMessage('Please enter a valid email address.', 'error');
-        return;
-    }
+if (contactForm) {
+    contactForm.addEventListener('submit', function(e) {
+        e.preventDefault();
 
-    fetch(contactForm.action, {
-        method: 'POST',
-        body: formData,
-        headers: { 'Accept': 'application/json' }
-    })
-    .then(response => {
-        if (response.ok) {
-            showFormMessage('Thank you for your message! We will get back to you soon.', 'success');
-            contactForm.reset();
-        } else {
-            showFormMessage('Oops! Something went wrong. Try again later.', 'error');
+        const formData = new FormData(contactForm);
+        const name = formData.get('name');
+        const email = formData.get('_replyto');
+        const subject = formData.get('subject');
+        const message = formData.get('message');
+
+        if (!name || !email || !subject || !message) {
+            showFormMessage('Please fill in all fields.', 'error');
+            return;
         }
-    })
-    .catch(() => {
-        showFormMessage('Submission failed. Try again later.', 'error');
+
+        if (!isValidEmail(email)) {
+            showFormMessage('Please enter a valid email address.', 'error');
+            return;
+        }
+
+        // AJAX submission
+        fetch(contactForm.action, {
+            method: 'POST',
+            body: formData,
+            headers: { 'Accept': 'application/json' }
+        })
+        .then(response => {
+            if (response.ok) {
+                showFormMessage('Thank you for submitting! We will contact you soon.', 'success');
+            } else {
+                showFormMessage('Oops! Something went wrong. Please try again.', 'error');
+            }
+        })
+        .catch(() => {
+            showFormMessage('Submission failed. Please try again later.', 'error');
+        });
     });
-});
+}
 /// Upto here it is updated 
             
             // =======================
@@ -667,6 +692,9 @@
 </body>
 
 </html>
+
+
+
 
 
 
